# SCARA_ws

./: .gitignore  README.md  SCARA_project_summary.md
src/: README_cam_pick_and_place.md
src/SCARA_pkg/: README_cam_pick_and_place.md  package.xml  setup.cfg  setup.py
src/SCARA_pkg/SCARA_pkg/: camdetect.py  cap_to_target.py  detect_bottle_cap.py  ikpos.py  joint_states_bridge.py  mks_ee.py  motor_selection.py  newposition.py  pick_and_place_cam.py  position.py  positionradient.py  setup_scara_gui.py
src/SCARA_pkg/launch/: cam_pick_and_place.launch.py  launch.py  perception_to_ik.launch.py  scara_hw_bridge.launch.py
src/scara_moveit_config/: .setup_assistant  package.xml
src/scara_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  scara_robot.ros2_control.xacro  scara_robot.srdf  scara_robot.urdf.xacro
src/scara_moveit_config/launch/: demo.launch.py  demo_bot.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/scara_robot/: CMakeLists.txt  package.xml
src/scara_robot/config/: joint_names_scara_robot.yaml  scara_controller.yaml
src/scara_robot/launch/: cam_pick_and_place.launch.py  display.launch  gazebo.launch  gazebo.launch.py  rviz.launch.py
src/scara_robot/meshes/: Link_1.STL  Link_2.STL  Link_ee.STL  base_link.STL
src/scara_robot/scara_robot/: fkpos.py  ikpos.py
src/scara_robot/src/: cam_pick_and_place.cpp  move.cpp  pick_and_place.cpp
src/scara_robot/urdf/: arm.xacro  scara_robot.csv  scara_robot.urdf.xacro
